# My-ai

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  go.mod  pyproject.toml
cmd/agentos/: main.go
docs/: agents.md  architecture.md  backups.md  chat.md  context-management.md  evals.md  go-cli-migration.md  implementation-status.md  interactive-chat.md  mcp-sdk-decision.md  mcp.md  memory.md  model-routing.md  models.md  profiles.md  providers.md  refiner.md  retrieval.md  roadmap.md  runtime-model-integration-plan.md  runtime.md  sdd-workflow.md  security.md  service-interfaces.md  skills.md  strategic-brain.md  streaming-chat.md  tools.md  traces.md  ui.md  usage.md  v0.3.0-implementation-plan.md  v0.3.0-release-notes.md  windows-powershell.md
evals/: cases.json
internal/agentoscli/: cli.go  cli_test.go
policies/: approval_rules.yaml  destructive_commands.yaml  sensitive_paths.yaml
scripts/: install-agentos-command.ps1  install.sh
tests/: test_agents.py  test_agents_cli.py  test_backups.py  test_brain.py  test_chat_cli.py  test_chat_client.py  test_cli.py  test_context.py  test_dashboard_interactive.py  test_doctor.py  test_evals.py  test_install_agentos_command.py  test_interactive_chat.py  test_interactive_cli.py  test_mcp.py  test_memory.py  test_memory_import_export.py  test_model_routing.py  test_models.py  test_models_cli.py  test_policies.py  test_profiles.py  test_providers.py  test_refiner.py  test_retrieval.py  test_sdd.py  test_services.py  test_skills.py  test_tools.py  test_traces.py  test_ui.py  test_usage.py  test_usage_cli.py
(+229 files in other folders)
